--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "react-redux": "^9.2.0"
+    "react-identicons": "^1.2.5",
+    "react-moment": "^1.1.3",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
+    "swiper": "^11.2.10",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
