--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reown/appkit": "^1.7.19",
     "@reown/appkit-adapter-ethers": "^1.7.19",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "ethers": "^6.15.0",
     "lucide-react": "^0.539.0",
     "moment": "^2.30.1",
